# ttyapple

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  c_output.cpp  frame.h  image.h  logger.h  main.cpp  output.cpp  output.h  paths.cpp  paths.h  stream_context.cpp  stream_context.h  time.h  tty_output.cpp  uefi_output.cpp
data/: c_frame_decoder.c  other_main.c  uefi_main.c
data/uefi/: SimpleTextInEx.h  UefiBaseType.h  UefiSpec.h
uefi/: Base.h  ProcessorBind.h  UefiMultiPhase.h
